# mixpresplit

./: .gitignore  LICENSE  README.md  mixpresplit.sublime-project  mixpresplit.sublime-workspace  pyproject.toml  requirements.txt
mixpresplit/: README.md  cli.py
scripts/: install-hooks.sh  pre-commit.sh  run-tests.sh
tests/: test_mixpresplit.py
testsamples/: readme.md
