[tool.poetry]
name = "mixpresplit"
version = "0.1.1"
description = "CLI Utility that allows splitting mixpre polywav files"
authors = ["David Huss <dh@atoav.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wavinfo = "^1.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
mixpresplit = "mixpresplit.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

